# weather-forecast-polymarket-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/weather_polymarket_bot/: __init__.py  __main__.py  ai_research.py  backtest.py  cli.py  config.py  dashboard.py  live_trading.py  market_backtest.py  model_market_backtest.py  models.py  news_monitor.py  open_meteo.py  parser.py  storage.py  telegram_fetcher.py
tests/: test_ai_research.py  test_backtest.py  test_config.py  test_dashboard.py  test_live_trading.py  test_market_backtest.py  test_model_market_backtest.py  test_news_monitor.py  test_open_meteo.py  test_parser.py
