[project]
name = "weather-forecast-polymarket-bot"
version = "0.1.0"
description = "Local-first weather forecast ingestion and Polymarket basket backtesting."
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

